Fix commander header spacing

--- a/index.css
+++ b/index.css
@@ -150,13 +150,15 @@ select {
     margin-top: var(--flow-space, 1rem);
 }
 
+.flow--space-small {
+    --flow-space: 0.5rem
+}
+
 .container {
     padding-inline: 2em;
     margin-inline: auto;
     max-width: 80rem;
 }
-
-
 
 .sr-only {
   position: absolute; 
